hphp/test/slow/await_as_an_expression/error/pipe5.php.expectf

Fatal error: Await cannot be used as an expression in this location because it's conditionally executed. in %s/pipe5.php on line 19
